Adding options to docker-run.sh, fixing Docker defaults.